firefox -- changed size to 2.5em to avoid spillover

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -37,7 +37,8 @@ body {
   height: 100%;
   line-height: 100px;
   color: #fff;
-  font-size: 3em;
+  font-size: 2.5em;
+  text-align: center;
   font: Garamond, Book;
   font-family: italic;
   font-variant: small-caps;
